# framework-F4-Conversion

./: .gitignore  .gitmodules  BuildRelease.ps1  Build_Config_Template.ps1  CMakeLists.txt  IME_SUPPORT.md  LICENSE.md  NOTICES.txt  README.md  UpdateExternalDeps.ps1  xmake.lua
cmake/: CompilerFlags.cmake  ExternalDependencies.cmake  commonlibsse.cmake  ultralight.cmake
src/: PCH.h  PrismaUI_API.h  main.cpp
src/API/: API.cpp  API.h
src/Hooks/: Hooks.cpp  Hooks.h
src/Menus/CursorMenu/: CursorMenu.cpp  CursorMenu.h
src/Menus/FocusMenu/: FocusMenu.cpp  FocusMenu.h
src/PrismaUI/: Communication.cpp  Communication.h  Core.cpp  Core.h  ImeHelper.cpp  ImeHelper.h  InputHandler.cpp  InputHandler.h  Inspector.cpp  Inspector.h  Listeners.cpp  Listeners.h  ViewManager.cpp  ViewManager.h  ViewOperationQueue.cpp  ViewOperationQueue.h  ViewRenderer.cpp  ViewRenderer.h
src/Utils/: DllLoader.h  Encoding.h  NanoID.h  RepeatingTaskRunner.h  SingleThreadExecutor.h
src/Utils/WinKeyHandler/: WinKeyHandler.cpp  WinKeyHandler.h
